--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "./node_modules/.bin/webpack-dev-server"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -18,6 +19,7 @@
     "node-sass": "^4.7.2",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-google-maps": "^9.4.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
