--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "geolib": "^2.0.24",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
