--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
+    "query-string": "^5.0.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-google-maps": "^9.4.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
