add github pages settings

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "homepage": "https://tyokopai.github.io/hotel-search/",
   "main": "index.js",
   "author": "Tyokopai <take353@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server"
+    "start": "./node_modules/.bin/webpack-dev-server",
+    "build": "./node_modules/.bin/webpack",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -40,6 +43,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "gh-pages": "^1.2.0"
   }
 }
